# TranscriptionSuite

./: .code-workspace  .code-workspace.jsonc  .doc-freshness.yaml  .dockerignore  .flake8  .gitignore  .gitmodules  .mcp.json  .pre-commit-config.yaml  .test_imports.py  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  README_DEV.md  STT_hotkeys_KDE.kksrc  Touching mercury_transcription.json  Touching mercury_transcription.json.old1  build_ctranslate2.sh  config.yaml  docker-compose.yml  list_audio_devices.py  pyproject.toml  test_imports.py
NATIVE_CLIENT/: __init__.py  __main__.py  audio_recorder.py  client_orchestrator.py  config.py  pyproject.toml  server_connection.py
NATIVE_CLIENT/platform/: __init__.py
NATIVE_CLIENT/tray/: __init__.py  base.py  factory.py  gtk4_tray.py  qt6_tray.py
_app-transcription-viewer/backend/: README.md  database.py  main.py  pyproject.toml
_app-transcription-viewer/backend/data/: transcriptions.db
_app-transcription-viewer/backend/routers/: recordings.py  search.py  transcribe.py
_app-transcription-viewer/src-tauri/: Cargo.toml  tauri.conf.json
_app-transcription-viewer/src-tauri/capabilities/: default.json
_app-transcription-viewer/src-tauri/src/: main.rs
_core/: list_audio_devices.py  pyproject.toml
_core/APP_VIEWER/: dev.sh  index.html  package-lock.json  package.json  tailwind.config.js
_core/APP_VIEWER/backend/: __init__.py  database.py  main.py  webapp_logging.py
_core/APP_VIEWER/src/: App.tsx  types.ts
_core/CANARY_SERVICE/: __init__.py  service.py
_core/DIARIZATION_SERVICE/: __init__.py  combiner.py  service.py
_core/SCRIPT/: config.yaml  config_manager.py  console_display.py  dependency_checker.py  logging_setup.py  model_manager.py  orchestrator.py  platform_utils.py  recorder.py  static_transcriber.py  tray_manager.py  utils.py  viewer_storage.py
_core/diarization_service/: combiner.py  service.py
_module-diarization/: README.md  pyproject.toml
_module-diarization/DIARIZATION/: __init__.py  api.py  config.yaml  config_manager.py  diarization_manager.py  diarize_audio.py  logging_setup.py  test_installation.py  utils.py
_nemo/: canary_server.py  canary_transcriber.py  pyproject.toml  test_canary.py  test_server.py
client/: pyproject.toml
client/common/: api_client.py  audio_recorder.py  tray_base.py
client/gnome/: tray.py
client/kde/: __init__.py  tray.py
client/scripts/: pyproject.toml  setup-client-gnome.sh  setup-client-kde.sh  setup-client-windows.ps1
client/src/client/: __init__.py  __main__.py
client/windows/: tray.py
dashboard/: .gitignore  .prettierignore  App.tsx  eslint.config.js  index.html  index.tsx  package-lock.json  package.json  pyproject.toml  tsconfig.json  types.ts  vite.config.ts  vitest.config.ts
dashboard/components/: AudioVisualizer.tsx  PopOutWindow.tsx  Sidebar.tsx
dashboard/components/__tests__/: ActivityNotifications.test.tsx  CustomSelect.test.tsx  HfTokenExplainer.test.tsx  NotebookView.canary-language.test.tsx  NotebookView.test.tsx  NotificationToasts.test.tsx  ServerView.test.tsx  SessionImportTab.canary-language.test.tsx  SessionImportTab.diarization-gate.test.tsx  SessionImportTab.drop-feedback.test.tsx  SessionImportTab.ffmpeg-warning.test.tsx  SessionImportTab.output-format.test.tsx  SessionView.canary-language.test.tsx  SessionView.client-link-stop.test.tsx  SessionView.greek-sigma.test.tsx  SessionView.test.tsx  StartupActivityInline.test.tsx
dashboard/components/editor/: FindReplaceTextEditor.tsx
dashboard/components/import/: DedupPromptModal.tsx
dashboard/components/models/: ModelCardPicker.tsx  ModelPickerRow.tsx  ModelRowDetails.tsx
dashboard/components/profiles/: EmptyProfileForm.tsx  ModelProfileSelector.tsx  ModelProfilesPanel.tsx
dashboard/components/ui/: AppleSwitch.tsx  (+21 more)
dashboard/electron/: appState.ts  appVariant.ts  checksumVerifier.ts  clipboardWayland.ts  compatGuard.ts  containerRuntime.ts  desktopIntegration.ts  dockerManager.ts  hfRepoAliases.ts  installerCache.ts  launchWatchdog.ts  macVariantUpdater.ts  main.ts  mlxServerManager.ts  notificationLog.ts  pasteAtCursor.ts  platformGate.ts  preload.ts  releaseUrl.ts  serverConfigPaths.ts  sha256Lookup.ts  shortcutManager.ts  startupEventWatcher.ts  trayManager.ts  tsconfig.json  updateInstaller.ts  updateManager.ts  updateMigration.ts  watcherManager.ts  waylandShortcuts.ts  wslDetect.ts
dashboard/public/: audio-worklet-processor.js
dashboard/scripts/: afterPack.cjs  dev-electron.mjs
dashboard/src/: index.css
dashboard/tests/: test_api_client_session_loop.py  test_docker_manager_uv_cache_semantics.py  test_live_mode_language_semantics.py
dashboard/ui-contract/: contract-baseline.json  design-language.md  transcription-suite-ui.contract.schema.json  transcription-suite-ui.contract.yaml
native_src/: config.yaml  pyproject.toml
native_src/DIARIZATION/: __init__.py  combiner.py  diarization_manager.py  service.py
native_src/MAIN/: config_manager.py  model_manager.py  orchestrator.py  platform_utils.py  static_transcriber.py
native_src/REMOTE_SERVER_WEB/: index.html
native_src/backend/: __init__.py  config.py  pyproject.toml
server/: .list_audio_devices.py  __init__.py  config.py  config.yaml  pyproject.toml  setup_wizard.py
server/api/: main.py
server/backend/: __init__.py  config.py  config_tree.py  pyproject.toml
server/core/: __init__.py  audio_utils.py  diarization_engine.py  transcription_engine.py
server/database/: __init__.py
server/docker/: Dockerfile  bootstrap_runtime.py  docker-compose.desktop-vm.yml  docker-compose.gpu-cdi.yml  docker-compose.gpu.yml  docker-compose.linux-host.yml  docker-compose.vulkan-wsl2.yml  docker-compose.vulkan.yml  docker-compose.yml  docker-entrypoint.sh  entrypoint.py  install_ca_certs.py  podman-compose.gpu.yml  start-common.ps1  start-common.sh  start-local.ps1  start-local.sh  start-remote.ps1  start-remote.sh  stop.ps1  stop.sh  whisper-cpp-linux.Dockerfile  whisper-cpp-vulkan-wsl2.Dockerfile  whispercpp-vulkan-noavx2.Dockerfile
server/frontend/: index.html  package-lock.json  package.json
(+807 files in other folders)
