[project]
name = "transcriptionsuite"
version = "0.2.0"
description = "Speech-to-Text Transcription Suite"
requires-python = ">=3.11,<3.12"
dependencies = [
    "build>=1.3.0",
    "ctranslate2==4.6.1",
    "faster-whisper>=1.2.1",
    "fastapi>=0.109.0",
    "httpx>=0.26.0",
    "pillow>=11.3.0",
    "psutil>=7.1.3",
    "pyaudio>=0.2.14",
    "pybind11==2.11.1",
    "pydantic>=2.0",
    "pyperclip>=1.11.0",
    "pyqt6>=6.10.0",
    "python-multipart>=0.0.6",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "scipy>=1.16.3",
    "setuptools==70.2.0",
    "sounddevice>=0.5.0",
    "soundfile>=0.13.1",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "uvicorn[standard]>=0.27.0",
    "webrtcvad>=2.0.10",
    "websocket-client>=1.9.0",
    "wheel>=0.45.1",
    "cuda-python>=13.0",
    "cython>=3.2.2",
    "ruff>=0.14.8",
    "pyannote-audio>=3.4.0",
]


# Line length for Ruff
[tool.ruff]
line-length = 90
