[project]
name = "transcriptionsuite"
version = "0.2.1"
description = "Speech-to-Text Transcription Suite"
requires-python = ">=3.11,<3.12"
dependencies = [
    # Core ML / Transcription
    "ctranslate2>=4.6.0,<5.0",
    "faster-whisper>=1.2.1",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",  # Required by Silero VAD (used in stt_engine.py)
    "pyannote-audio>=3.4.0",
    
    # Audio Processing
    "pyaudio>=0.2.14",
    "soundfile>=0.13.1",
    "webrtcvad>=2.0.10",
    "scipy>=1.16.0",
    
    # Web / API
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0",
    "httpx>=0.26.0",
    
    # Desktop / UI
    "pyqt6>=6.10.0",
    "pyperclip>=1.11.0",
    "rich>=14.2.0",
    
    # Utilities
    "pyyaml>=6.0.3",
    "psutil>=7.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.0",
    "build>=1.3.0",
    "wheel>=0.45.0",
    "cython>=3.2.0",
    "pybind11>=2.11.0",
    "setuptools>=70.0.0",
]


# Specific extra url for the CUDA enabled versions of torch/torchaudio.
# Update it when CUDA version updates (cu126 = CUDA 12.6).
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
# Both torch and torchaudio must come from the same index to match CUDA versions
torch = { index = "pytorch-cu126" }
torchaudio = { index = "pytorch-cu126" }

# Line length for Ruff
[tool.ruff]
line-length = 90
