[project]
name = "transcriptionsuite-dev"
version = "2.0.0"
description = "TranscriptionSuite - Development Tools Only"
requires-python = ">=3.11"
# No runtime dependencies - app runs in Docker, client builds via PyInstaller
dependencies = []

[project.optional-dependencies]
# Development tools for code quality
dev = [
    "ruff>=0.1.0",
    "pyright>=1.1.350",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
# Build tools for creating executables
build = [
    "pyinstaller>=6.0.0",
    "build>=1.0.0",
    "hatchling>=1.18.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
