[project]
name = "transcription-suite-client"
version = "1.0.0"
description = "Native client for TranscriptionSuite - cross-platform tray application"
readme = "../README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Bill" }
]
keywords = ["transcription", "speech-to-text", "whisper", "tray"]

dependencies = [
    "aiohttp>=3.9.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0",
    "pyperclip>=1.8.0",
]

[project.optional-dependencies]
# PyQt6 for KDE/Windows
qt = [
    "PyQt6>=6.6.0",
]
# GTK for GNOME (system packages typically used instead)
gtk = [
    "PyGObject>=3.46.0",
]
# Audio recording
audio = [
    "pyaudio>=0.2.14",
]
# All features
all = [
    "transcription-suite-client[qt,audio]",
]

[project.scripts]
ts-client = "native_client.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
