[project]
name = "transcriptionsuite"
version = "0.1.1"
description = "Speech-to-Text Transcription Suite"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "build>=1.3.0",
    "ctranslate2",
    "faster-whisper>=1.2.1",
    "fastapi>=0.109.0",
    "httpx>=0.26.0",
    "pillow>=11.3.0",
    "psutil>=7.1.3",
    "pyaudio>=0.2.14",
    "pybind11==2.11.1",
    "pydantic>=2.0",
    "pyperclip>=1.11.0",
    "pyqt6>=6.10.0",
    "python-multipart>=0.0.6",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "scipy>=1.16.3",
    "setuptools>=70.2.0",
    "sounddevice>=0.5.0",
    "soundfile>=0.13.1",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "uvicorn[standard]>=0.27.0",
    "webrtcvad>=2.0.10",
    "websocket-client>=1.9.0",
    "wheel>=0.45.1",
]

# Specific extra url for the CUDA enabled versions of torch.
# Update it when CUDA version updates (cu130 = CUDA 13.0).
[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cu130"]

# Local path for the ctranslate2 wheel file.
[tool.uv.sources]
ctranslate2 = { path = "deps/ctranslate2/python/dist/ctranslate2-4.6.1-cp313-cp313-linux_x86_64.whl" }

# Line length for Ruff
[tool.ruff]
line-length = 90
