[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transcription-suite-client"
version = "0.3.0"
description = "TranscriptionSuite native client for desktop integration"
requires-python = ">=3.11,<3.12"
license = "MIT"
authors = [
    { name = "homelab-00" }
]
keywords = ["transcription", "tray", "desktop", "client"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Topic :: Desktop Environment",
]

dependencies = [
    "aiohttp>=3.13.2",
    "numpy>=2.3.5",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
qt = [
    "PyQt6>=6.10.1",
]
audio = [
    "pyaudio>=0.2.14",
]
kde = [
    "PyQt6>=6.10.1",
    "pyaudio>=0.2.14",
]
gnome = [
    "pyaudio>=0.2.14",
    # Note: GTK and AppIndicator are system packages on Linux
]
windows = [
    "PyQt6>=6.10.1",
    "pyaudio>=0.2.14",
]

[project.scripts]
transcription-client = "client.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/client"]
