[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transcriptionsuite-dashboard"
version = "1.0.0"
description = "TranscriptionSuite Dashboard for desktop integration"
requires-python = ">=3.13,<3.14"
license = "GPL-3.0-or-later"
authors = [
    { name = "homelab-00" }
]
keywords = ["transcription", "tray", "desktop", "client"]
classifiers = [
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Topic :: Desktop Environment",
]

dependencies = [
    "aiohttp>=3.13.3",
    "numpy>=2.3.5",
    "pyyaml>=6.0.3",
    "requests>=2.32.0",
    "soundcard>=0.4.3",
    "markdown>=3.7",
]

[project.optional-dependencies]
qt = [
    "PyQt6>=6.10.1",
]
audio = [
    "pyaudio>=0.2.14",
    "soundcard>=0.4.3",
]
kde = [
    "PyQt6>=6.10.1",
    "pyaudio>=0.2.14",
    "soundcard>=0.4.3",
]
gnome = [
    "pyaudio>=0.2.14",
    "soundcard>=0.4.3",
    # Note: GTK and AppIndicator are system packages on Linux
    "PyQt6>=6.10.1",
]
windows = [
    "PyQt6>=6.10.1",
    "pyaudio>=0.2.14",
    "soundcard>=0.4.3",
]

[project.scripts]
transcription-dashboard = "dashboard.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dashboard"]
