[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transcriptionsuite-server"
version = "1.3.1"
description = "TranscriptionSuite unified server for transcription services"
requires-python = ">=3.13,<3.14"
license = "GPL-3.0-or-later"
authors = [
    { name = "homelab-00" }
]
keywords = ["transcription", "whisper", "speech-to-text", "diarization"]
classifiers = [
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    # Web / API
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.41.0",
    "python-multipart>=0.0.22",
    "pydantic>=2.12.5",
    "aiohttp>=3.13.3",
    "httpx>=0.28.1",
    "websockets>=16.0",
    # Core ML / Transcription
    "torch>=2.8.0",          # Required by PyAnnote 4.0.4
    "torchaudio>=2.8.0",     # Required by PyAnnote 4.0.4
    "pyannote.audio>=4.0.4", # Diarization (still needed for NeMo backends)
    # Audio Processing
    "numpy>=2.4.2",
    "soundfile>=0.13.1",
    "webrtcvad>=2.0.10",
    "silero-vad>=6.2.1",
    "ffmpeg-python>=0.2.0",
    "scipy>=1.17.1",
    # Database
    "aiosqlite>=0.22.1",
    "sqlalchemy>=2.0.48",
    "alembic>=1.18.4",
    # Utilities
    "setuptools<81", # webrtcvad imports pkg_resources, removed in setuptools>=81
    "pyyaml>=6.0.3",
    "psutil>=7.2.2",
    "filelock>=3.25.0",
    "aiofiles>=24.1.0",
    "structlog>=25.5.0",
]

[project.optional-dependencies]
whisper = [
    "faster-whisper>=1.2.1",
    "ctranslate2>=4.7.1",
    "whisperx>=3.8.1",       # WhisperX: faster-whisper + wav2vec2 alignment + diarization
]
nemo = [
    "nemo_toolkit[asr]>=2.7.0",
]
vibevoice_asr = [
    "vibevoice @ git+https://github.com/microsoft/VibeVoice.git@1807b858d4f7dffdd286249a01616c243e488c9e",
]
mlx = [
    "parakeet-mlx>=0.2.0",
    "canary-mlx>=0.1.0",
    "soundfile>=0.13.1",
    "mlx-audio>=0.4.1",
    # Live Mode uses faster-whisper even on Metal.
    "faster-whisper>=1.2.1",
    "ctranslate2>=4.7.1",
]
[project.scripts]
transcription-server = "server.api.main:main"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pip-licenses>=5.5.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "p0: Critical — data integrity, security, core functionality",
    "p1: High — core user journeys, integration points",
    "p2: Medium — secondary flows, edge cases, coverage hardening",
    "p3: Low — benchmarks, exploratory, nice-to-have",
    "benchmark: Performance benchmarks (latency, throughput)",
    "durability: Transcription result persistence and failure recovery",
    "live_mode: Live Mode transcription engine and session",
    "model_swap: Model swap lifecycle and recovery",
    "openai_api: OpenAI-compatible API format and edge cases",
]

# The section below is needed to specifically get CUDA 12.9 (and not the default 12.8)
[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv.sources]
# Linux/Windows: use CUDA 12.9 build; macOS: fall back to PyPI CPU/MPS build
torch = [{ index = "pytorch-cu129", marker = "sys_platform != 'darwin'" }]
torchaudio = [{ index = "pytorch-cu129", marker = "sys_platform != 'darwin'" }]

# mlx-audio (in the mlx extra) has dependency requirements that conflict with
# the CUDA-oriented extras (whisper, nemo, vibevoice_asr).  The mlx extra is
# macOS-only; the others target Linux/Windows CUDA.  They are never installed
# in the same environment.
[tool.uv]
conflicts = [
    [
        { extra = "mlx" },
        { extra = "nemo" },
    ],
    [
        { extra = "mlx" },
        { extra = "vibevoice_asr" },
    ],
    [
        { extra = "mlx" },
        { extra = "whisper" },
    ],
]
